# inkCards

./: README.md  inkathon.code-workspace  pnpm-lock.yaml  vercel.json
contracts/: Cargo.toml  rust-toolchain
contracts/deployments/factory/: alephzero-testnet.ts  factory.contract  factory.json  factory.wasm
contracts/deployments/greeter/: greeter.contract  greeter.json  greeter.wasm
contracts/deployments/ink_cards/: ink_cards.contract  ink_cards.json  ink_cards.wasm
contracts/src/factory/: Cargo.toml  lib.rs
contracts/src/ink_cards/: Cargo.toml  lib.rs
contracts/src/ink_cards/contracts/card/: Cargo.toml  lib.rs
contracts/src/ink_cards/traits/: card.rs
frontend/: package.json
frontend/src/components/home/: HomeTopBar.tsx
frontend/src/components/web3/: ConnectButton.tsx
frontend/src/config/: environment.ts
frontend/src/deployments/: deployments.ts  poolsDeployments.ts
frontend/src/pages/: _app.tsx  _index.tsx  create.tsx  index.tsx  pools.tsx  spend.tsx
frontend/src/pages/interact/: [addr].tsx
